<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blue"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="4dp">

    <com.makeramen.roundedimageview.RoundedImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="4dp"
        app:riv_corner_radius="40dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/personal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:paddingTop="8dp"
        android:text="@string/file_explorer"
        android:textColor="@color/gold"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:paddingTop="8dp"
        android:text="@string/made_by_zeyad_emad"
        android:textColor="@color/white"
        android:textSize="16sp" />


</LinearLayout>