<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <TextView
        android:id="@+id/rename_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/rename"
        android:textAlignment="center"
        android:textColor="@color/light_grey"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center"
            android:minHeight="48dp"
            android:text="@string/new_name"
            android:textColor="@color/light_grey"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/new_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:autofillHints="name"
            android:inputType="text"
            android:maxEms="20"
            android:minHeight="48dp"
            android:textColor="@color/light_grey"
            android:textSize="17sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:backgroundTint="@color/dark_grey"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_grey"
            android:text="@string/ok"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>


</LinearLayout>