<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:layout_marginBottom="20dp"
    android:background="@drawable/details_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/details"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:text="@string/file_name"
                android:textColor="@color/light_grey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/details_file_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:textAlignment="viewStart"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="30dp"
                android:textColor="@color/light_grey"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:text="@string/file_type"
                android:textColor="@color/light_grey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/details_file_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:textColor="@color/light_grey"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:text="@string/file_size"
                android:textColor="@color/light_grey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/details_file_size"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:textColor="@color/light_grey"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:text="@string/modified_time"
                android:textColor="@color/light_grey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/details_file_modified_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:textColor="@color/light_grey"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:text="@string/path"
                android:textColor="@color/light_grey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/details_file_path"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="30dp"
                android:textColor="#0A7CD8"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextViewEdits" />

        </LinearLayout>


        <Button
            android:id="@+id/ok"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:backgroundTint="@color/dark_grey"
            android:text="@string/ok"
            android:textColor="#1286E3"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>


</ScrollView>