<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".Fragments.Home">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="4dp"
        android:text="@string/browse"
        android:textColor="@color/light_grey"
        android:textSize="18sp" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_files"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="11dp"
        android:background="@drawable/search_background"
        android:theme="@style/AppTheme.SearchView"
        app:iconifiedByDefault="false"
        app:queryBackground="@null"
        app:queryHint="Search" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="11dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/layout_image"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="6dp"
                    android:background="@drawable/home_scroll_background"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="7dp"
                        android:src="@drawable/next_photo" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/images"
                        android:textAlignment="center"
                        android:textColor="@color/light_grey"
                        android:textSize="13sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_videos"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="6dp"
                    android:background="@drawable/home_scroll_background"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="7dp"
                        android:src="@drawable/next_video" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/videos"
                        android:textAlignment="center"
                        android:textColor="@color/light_grey"
                        android:textSize="13sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_docs"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="6dp"
                    android:background="@drawable/home_scroll_background"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="7dp"
                        android:src="@drawable/next_google" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/docs"
                        android:textAlignment="center"
                        android:textColor="@color/light_grey"
                        android:textSize="13sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_audio"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="6dp"
                    android:background="@drawable/home_scroll_background"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="7dp"
                        android:src="@drawable/next_audio" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/audio"
                        android:textAlignment="center"
                        android:textColor="@color/light_grey"
                        android:textSize="13sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_apps"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="6dp"
                    android:background="@drawable/home_scroll_background"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="7dp"
                        android:src="@drawable/next_application" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/apps"
                        android:textAlignment="center"
                        android:textColor="@color/light_grey"
                        android:textSize="13sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_zip"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="6dp"
                    android:background="@drawable/home_scroll_background"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="7dp"
                        android:src="@drawable/next_zip"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/archives"
                        android:textAlignment="center"
                        android:textColor="@color/light_grey" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_downloads"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="6dp"
                    android:background="@drawable/home_scroll_background"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="7dp"
                        android:src="@drawable/download"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/downloads"
                        android:textAlignment="center"
                        android:textColor="@color/light_grey" />

                </LinearLayout>

            </LinearLayout>

        </HorizontalScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/last_modified"
            android:textColor="@color/light_grey"
            android:textSize="12sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recent_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="11dp"
            android:background="@drawable/last_modified"
            android:padding="4dp"
            android:isScrollContainer="true" />

    </LinearLayout>


</LinearLayout>