<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1EBEB"
    tools:context=".Fragments.About">

    <View
        android:id="@+id/cover"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/prog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/personal"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/personal_photo_background"
        android:src="@drawable/personal"
        app:layout_constraintBottom_toBottomOf="@id/cover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cover"
        app:riv_corner_radius="50dp" />

    <TextView
        android:id="@+id/my_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/zeyad_emad_abd_elmaksoud"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/personal" />

    <TextView
        android:id="@+id/job_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:text="@string/android_developer"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/my_name"
        app:layout_constraintStart_toStartOf="@id/my_name"
        app:layout_constraintTop_toBottomOf="@id/my_name" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/job_title">


        <ImageView
            android:id="@+id/facebook"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="6dp"
            android:contentDescription="@string/app_name"
            android:padding="3dp"
            android:src="@drawable/facebook" />


        <ImageView
            android:id="@+id/github"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="6dp"
            android:contentDescription="@string/app_name"
            android:padding="3dp"
            android:src="@drawable/github" />


        <ImageView
            android:id="@+id/linkedIn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="6dp"
            android:contentDescription="@string/app_name"
            android:padding="3dp"
            android:src="@drawable/linkedin" />

        <ImageView
            android:id="@+id/email"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="6dp"
            android:contentDescription="@string/app_name"
            android:padding="3dp"
            android:src="@drawable/gmail" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>